--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,70 @@
+bidict==0.22.1
+blinker==1.7.0
+cachelib==0.10.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+command-not-found==0.3
+cryptography==3.4.8
 cs50==9.3.0
+dbus-python==1.2.18
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+dnspython==2.4.2
+docopt==0.6.2
+email-validator==2.1.0.post1
 Flask==3.0.0
+Flask-Session==0.5.0
+Flask-SocketIO==5.3.6
+Flask-WTF==1.2.1
+greenlet==3.0.1
+gyp==0.1
+h11==0.14.0
+httplib2==0.20.2
+idna==3.6
+imageio==2.33.1
+importlib-metadata==4.6.4
+itsdangerous==2.1.2
+jeepney==0.7.1
+Jinja2==3.1.2
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+MarkupSafe==2.1.3
+more-itertools==8.10.0
+netifaces==0.11.0
+numpy==1.26.2
+oauthlib==3.2.0
+packaging==23.2
 Pillow==10.1.0
-Pillow==10.1.0
+pipreqs==0.4.13
+psutil==5.9.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+pysqlite3==0.5.2
+python-apt==2.4.0+ubuntu2
+python-engineio==4.8.0
+python-socketio==5.10.0
+PyYAML==5.4.1
+requests==2.31.0
+SecretStorage==3.3.1
+simple-websocket==1.0.0
+six==1.16.0
+SQLAlchemy==2.0.23
+sqlparse==0.4.4
+systemd-python==234
+termcolor==2.3.0
+typing_extensions==4.8.0
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==2.1.0
+urwid==2.1.2
+wadllib==1.3.6
 Werkzeug==3.0.1
+wsproto==1.2.0
+WTForms==3.1.1
+yarg==0.1.9
+zipp==1.0.0
